[package]
name = "switch-pro-xy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
bluer = { version = "0.15.0", features = ["full"] }
bytes = "1.2.1"
clap = { version = "3.2.22", features = ["derive"] }
env_logger = "0.9.1"
futures = "0.3.24"
libc = "0.2.134"
log = "0.4.17"
rand = "0.8.5"
tokio = { version = "1.21.1", features = ["full"] }
uuid = "1.1.2"
